--- a/Frontend/src/pages/Login.scss
+++ b/Frontend/src/pages/Login.scss
@@ -81,6 +81,14 @@
       &:hover {
         background: #222;
       }
+      &:disabled {
+        background: #888;
+        cursor: not-allowed;
+        opacity: 0.7;
+        &:hover {
+          background: #888;
+        }
+      }
     }
   }
 }
