--- a/Frontend/src/pages/Register.scss
+++ b/Frontend/src/pages/Register.scss
@@ -67,6 +67,16 @@
             &:hover {
                 background: #222;
             }
+
+            &:disabled {
+                background: #888;
+                cursor: not-allowed;
+                opacity: 0.7;
+
+                &:hover {
+                    background: #888;
+                }
+            }
         }
     }
 
